# BCKomanda5

./: .gitmodules  Cargo.toml  README.md
Eth2_phase1/: .gitignore  Cargo.toml
Eth2_phase1/src/: main.rs
anyhow_stable_backtrace/: Cargo.toml
anyhow_stable_backtrace/src/: lib.rs
bls/: Cargo.toml
bls/src/: consts.rs  error.rs  lib.rs  public_key.rs  public_key_bytes.rs  secret_key.rs  secret_key_bytes.rs  signature.rs  signature_bytes.rs
hashing/: Cargo.toml
hashing/src/: lib.rs
helper_functions/: Cargo.toml
helper_functions/src/: accessors.rs  cache.rs  cached_ext.rs  crypto.rs  error.rs  lib.rs  misc.rs  mutators.rs  predicates.rs  shuffle.rs  weak_key.rs
scripts/ci/: ci.sh  ci_no_tarpaulin.sh  clippy.bash  install.sh
shard_fork_choice/: Cargo.toml
shard_fork_choice/src/: config.rs  lib.rs  main.rs  tests.rs  types.rs
shard_fork_choice/tests/: test.rs
shard_transition_processing/: Cargo.toml
shard_transition_processing/src/: apply_shard_transition.rs  configs.rs  constants.rs  error.rs  errors.rs  lib.rs  libas.rs  process_crosslink_for_shard.rs  tests.rs  types.rs
shard_transition_processing/tests/: test.rs
spec_test_utils/: Cargo.toml
spec_test_utils/src/: lib.rs
stubs/: Cargo.toml
stubs/src/: beacon_chain.rs  lib.rs  shard_transition.rs
types/src/: beacon_state.rs  config.rs  consts.rs  containers.rs  lib.rs  primitives.rs
types/types/: Cargo.toml
types/types/src/: arc_ext.rs  containers.rs  fixed_vector.rs
utils/ssz_new/: Cargo.toml
utils/ssz_new/src/: decode.rs  encode.rs  lib.rs  utils.rs
utils/ssz_new/src/types/: bitfield.rs  byte_field.rs  fixed_vector.rs  mod.rs  variable_list.rs
utils/ssz_new/tests/: tests.rs
utils/ssz_new_derive/: Cargo.toml
utils/ssz_new_derive/src/: lib.rs
