[workspace]
members = [
    'shard_fork_choice',
    'shard_transition_processing',
    'anyhow_stable_backtrace',
    'bls',
    'hashing',
    'helper_functions',
    'spec_test_utils',
    'stubs',
    'types',
    'utils/ssz_new',
    'utils/ssz_new_derive',
]

[patch.crates-io]
# We have to override these because Lighthouse does it for some reason.
# eth2_hashing     = { git = 'https://github.com/sigp/lighthouse', rev = '56ffe91f9093605737ca1c676ea3493a75b2cfe6' }
# eth2_hashing     = { path = "./lighthouse/crypto/eth2_hashing" }
eth2_hashing     = { git = 'https://github.com/SifraiHQ/lighthouse', rev = '3749ac7077c76cbad1c37b1c08841759e38d24a2' }

# eth2_ssz         = { git = 'https://github.com/sigp/lighthouse', rev = '56ffe91f9093605737ca1c676ea3493a75b2cfe6' }
# eth2_ssz         = { path = "./lighthouse/consensus/ssz" }
eth2_ssz         = { git = 'https://github.com/SifraiHQ/lighthouse', rev = '3749ac7077c76cbad1c37b1c08841759e38d24a2' }

# eth2_ssz_types   = { git = 'https://github.com/sigp/lighthouse', rev = '56ffe91f9093605737ca1c676ea3493a75b2cfe6' }
# eth2_ssz_types   = { path = "./lighthouse/consensus/ssz_types" }
eth2_ssz_types   = { git = 'https://github.com/SifraiHQ/lighthouse', rev = '3749ac7077c76cbad1c37b1c08841759e38d24a2' }

# tree_hash        = { git = 'https://github.com/sigp/lighthouse', rev = '56ffe91f9093605737ca1c676ea3493a75b2cfe6' }
# tree_hash        = {  path = "./lighthouse/consensus/tree_hash" }
tree_hash        = { git = 'https://github.com/SifraiHQ/lighthouse', rev = '3749ac7077c76cbad1c37b1c08841759e38d24a2' }

# tree_hash_derive = { git = 'https://github.com/sigp/lighthouse', rev = '56ffe91f9093605737ca1c676ea3493a75b2cfe6' }
# tree_hash_derive = { path = "./lighthouse/consensus/tree_hash_derive" }
tree_hash_derive = { git = 'https://github.com/SifraiHQ/lighthouse', rev = '3749ac7077c76cbad1c37b1c08841759e38d24a2' }