[package]
name = 'helper_functions'
version = '0.1.0'
authors = ['Tadas Vaitiekūnas', 'Vidmantas Bakštys', 'Olga Joana Šmitaitė']
edition = '2018'

[dependencies]
anyhow_stable_backtrace = { path = '../anyhow_stable_backtrace' }
bit_field = '0.10.1'
bls = { path = '../bls' }
cached = '0.19.0'
educe = '0.4.13'
ethereum-types = '0.9.2'
hashing = { path = '../hashing' }
itertools = '0.9.0'
owning_ref = '0.4.1'
ssz_new = { path = '../utils/ssz_new' }
thiserror = '1.0.21'
tree_hash = '0.1.1'
tree_hash_derive = '0.2.0'
typenum = '1.12.0'
types = { path = '../types' }
stubs = { path = '../stubs'}

[dev-dependencies]
hex-literal = '0.3.1'
