[package]
name = "shard_transition_processing"
version = "0.1.0"
authors = ["Vincentas Čapskis <vincentascapskis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = '../types' }
helper_functions = { path = '../helper_functions' }
stubs = { path = '../stubs' }