[package]
name = "shard_transition_processing"
version = "0.1.0"
authors = ["Vincentas Čapskis <vincentascapskis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
thiserror = '1.0.21'
tree_hash = '0.1.1'
types = { path = '../types' }
helper_functions = { path = '../helper_functions' }
stubs = { path = '../stubs' }
anyhow_stable_backtrace = { path = '../anyhow_stable_backtrace' }
